--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,12 +1,15 @@
 ---
-
+export interface Props {
+  title: string;
+}
+const { title } = Astro.props
 ---
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Document</title>
+  <title>{Astro.props.title}</title>
 </head>
 <body>
   <slot />
