--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,25 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro'
 const header = "Ava's Fun World"
-const response = await fetch('https://jsonplaceholder.typicode.com/users?_limit=10')
-const users = await response.json()
-// const users = ['Elizabeth', 'Posey', 'Ava Rose', 'Hannah']
-const visible = true;
+
 ---
 
-<Layout title="Duude">
+<Layout title="Ava's Fun World">
 	<div class="mx-auto p-24 w-screen h-screen bg-avaRhubarb overflow-auto">
-		<article>
-			<h1 class="font-extrabold font-serif text-6xl text-avaLemon mb-6">{header}</h1>
-			<h3 class="text-avaLemon text-3xl mb-6">Yo dude!</h3>
-			<p class="text-2xl font-light leading-10 text-avaPizzazz">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-			<ul class="text-2xl text-avaPizzazz leading-10">
-				{users.map(user => <li>{user.name}</li>)}
-			</ul>
-
-			{visible ? <p class="text-avaPizzazz">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam omnis est perspiciatis accusamus nam veniam ab et aperiam laboriosam praesentium quos totam quam eligendi aliquid, excepturi, voluptates rerum animi. Non.</p> : <p>I am not visible!</p>}
-
-		</article>
-
+		<h1 class="font-extrabold font-serif text-6xl text-avaLemon mb-6">{header}</h1>
 	</div>
 </Layout>
