--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -5,15 +5,15 @@ const headerText = "Ava's Fun World"
 
 ---
 
-<header class="flex flex-col gap-0 m-auto justify-center p-3 rounded-3xl border border-white w-full">
-  <div class="flex flex-row gap-4 m-auto justify-center">
-    <h1 class="font-extrabold font-serif text-6xl text-avaLemon self-center">{headerText}</h1>
-    <img class="h-36 items-center m-0 jelloHorizontal" src={avaMean} alt="" />
+<header class="flex flex-col sm:flex-row gap-2 justify-between items-center rounded-3xl w-full">
+  <div class="flex flex-col sm:flex-row gap-0 justify-start items-center text-avaRhubarb">
+    <img class="h-24 items-center mr-4 jelloHorizontal" src={avaNice} alt="" />
+    <h1 class="font-extrabold font-sans text-[max(2rem,4vw)] text-center leading-[1.15]">{headerText}</h1>
   </div>
-  <div class="flex flex-row gap-4 m-auto justify-center">
-    <p class="text-avaLemon"><a href="#">Home</a></p>
-    <p class="text-avaLemon"><a href="#">Blog</a></p>
-    <p class="text-avaLemon"><a href="#">About</a></p>
+  <div class="flex flex-col sm:flex-row gap-2 items-center justify-end pr-0 sm:pr-8 text-avaRhubarb text-[max(1rem,2vw)]">
+    <p class=""><a href="#">Home</a></p>
+    <p class=""><a href="#">Blog</a></p>
+    <p class=""><a href="#">About</a></p>
   </div>
 </header>
 
