--- a/src/css/scroller.scss
+++ b/src/css/scroller.scss
@@ -1,15 +1,15 @@
 ::-webkit-scrollbar {
-  height: .7rem;
-  width: .7rem;
+  height: 1.3rem;
+  width: 1.3rem;
+
 }
 
 ::-webkit-scrollbar-thumb {
-  background: transparent;
+  background: rgb(255, 187, 0);
   // box-shadow: 0 2px 10px hsl(0deg 0% 0% / 50%);
-  border: 1px solid white;
+  border: 2px solid white;
   border-radius: 100px;
   cursor: pointer;
-
 
   &:hover {
     // background: white;
@@ -35,7 +35,7 @@ details::-webkit-scrollbar {
 }
 
 ::-webkit-scrollbar {
-  height: 0.6rem;
-  width: 0.6rem;
+  height: 1.3rem;
+  width: 1.3rem;
   border-radius: 100px;
 }
