--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import Header from '../components/header.astro';
 import Footer from '../components/footer.astro';
-import '../styles.scss'
+import '../css/styles.scss'
 export interface Props {
   title?: string;
 }
@@ -16,22 +16,30 @@ const { title = 'Avas Fun World' } = Astro.props as Props
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <title>{title}</title>
 </head>
-<body class="w-screen h-screen gradientFromHell mx-auto p-12 text-center flex flex-col justify-start">
+<body class="container w-screen h-screen bg-gray-900 mx-auto p-4 text-center flex flex-col justify-start gradientFromHell">
   <Header />
   <slot />
-  <Footer />
+  <!-- <Footer /> -->
 </body>
 </html>
 
 <style lang="scss" is:global>
+  * {
+    transition: all .5 ease-out;
+  }
+
   $avaRhubarb: #8100a8ff;
   $avaViolet: #871fffff;
   $avaPizzazz: #ff57eeff;
   $avaLemon: #fffd70ff;
-  $gradient-top: linear-gradient(0deg, $avaRhubarb, $avaViolet, $avaPizzazz, $avaLemon);
+  $gradient-top: linear-gradient(0deg, $avaViolet, $avaPizzazz, $avaLemon);
+  $gradient-bottom: linear-gradient(180deg, $avaViolet, $avaPizzazz, $avaLemon);
 
   .gradientFromHell {
     background-image: $gradient-top;
+  }
+  .gradientFromHellB {
+    background-image: $gradient-bottom;
   }
 
 
