--- a/src/styles/animations.scss
+++ b/src/styles/animations.scss
@@ -1,14 +1,3 @@
-@import './colors.scss';
-@import './scroller.scss';
-
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap');
-
-
-.yellow {
-  color: yellow !important;
-}
-
 .jelloHorizontal {
   animation: jelloHorizontal 2s both;
   animation-delay: 1s;
@@ -19,10 +8,10 @@
 
 
 .jelloHorizontal:hover {
-  animation: jelloHorizontal 2s both;
+  animation: jelloHorizontal 2s both !important;
   // animation-timing-function: ease;
   // animation-delay: initial !important;
-  animation-play-state: running;
+  animation-play-state: running !important;
   // background: red;
 }
 
