--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -5,15 +5,15 @@ const headerText = "Ava's Fun World"
 
 ---
 
-<header class="flex flex-col sm:flex-row gap-2 justify-between items-center rounded-3xl w-full">
-  <div class="flex flex-col sm:flex-row gap-0 justify-start items-center text-avaRhubarb">
+<header class="flex flex-col sm:flex-row gap-2 justify-between items-center rounded-3xl w-full mb-2 sm:mb-0">
+  <div class="flex flex-col flex-wrap sm:flex-row gap-0 justify-start items-center text-avaRhubarb">
     <img class="h-24 items-center mr-4 jelloHorizontal" src={avaNice} alt="" />
-    <h1 class="font-extrabold font-sans text-[max(2rem,4vw)] text-center leading-[1.15]">{headerText}</h1>
+    <h1 class="font-bold font-sans text-[max(2rem,4vw)] text-center leading-[1.15] drop-shadow-[0px_4px_6px_#ff57ee]">{headerText}</h1>
   </div>
-  <div class="flex flex-col sm:flex-row gap-2 items-center justify-end pr-0 sm:pr-8 text-avaRhubarb text-[max(1rem,2vw)]">
-    <p class=""><a href="#">Home</a></p>
-    <p class=""><a href="#">Blog</a></p>
-    <p class=""><a href="#">About</a></p>
+  <div class="flex flex-wrap sm:flex-row gap-6 items-center sm:justify-end justify-center pr-0 sm:pr-8 text-avaRhubarb text-[max(1rem,2vw)]">
+    <p class="drop-shadow-[0px_4px_6px_#ff57ee]"><a href="#">Home</a></p>
+    <p class="drop-shadow-[0px_4px_6px_#ff57ee]"><a href="#">Blog</a></p>
+    <p class="drop-shadow-[0px_4px_6px_#ff57ee]"><a href="#">About</a></p>
   </div>
 </header>
 
