--- a/src/styles/scroller.scss
+++ b/src/styles/scroller.scss
@@ -7,7 +7,8 @@
 ::-webkit-scrollbar-thumb {
   background: rgb(255, 187, 0);
   // box-shadow: 0 2px 10px hsl(0deg 0% 0% / 50%);
-  border: 2px solid white;
+  // border-right: 2px solid black;
+  border-bottom: 2px solid $avaRhubarb;
   border-radius: 100px;
   cursor: pointer;
 
