--- a/src/components/articles.astro
+++ b/src/components/articles.astro
@@ -1,21 +1,17 @@
 ---
-import { Img } from "astro-imagetools/components";
-// import { BackgroundPicture } from "astro-imagetools/components";
+// import { Img } from "astro-imagetools/components";
 import {
   BackgroundImage,
   ImageSupportDetection,
 } from "astro-imagetools/components";
 
 import Layout from '../layouts/Layout.astro'
-// import Button from '../components/button.astro'
-const avaMean = 'src/images/ava-mean.png'
-const avaNice = 'src/images/ava-nice.png'
 
 const blogArticles = [
 	{
 		head: "Lorem ipsum dolor sit amet, consectetur adipiscing elit",
-		body: "Curabitur blandit tempus porttitor. Nullam id dolor id nibh ultricies vehicula ut id elit. Maecenas faucibus mollis interdum.",
-		imageUrl: "https://placedog.net/600/200"
+		body: "Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sed diam eget risus varius blandit sit amet non magna.",
+		imageUrl: "https://placedog.net/800/650"
 	},
 	{
 		head: "Nullam id dolor id nibh ultricies vehicula ut id elit.",
@@ -40,7 +36,7 @@ const blogArticles = [
 	{
 		head: "Nibh Tristique Ullamcorper Aenean Bibendum",
 		body: "Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam id dolor id nibh ultricies vehicula ut id elit.",
-		imageUrl: "https://placedog.net/600/500"
+		imageUrl: "https://placedog.net/500/500"
 	}
 ]
 ---
@@ -49,32 +45,33 @@ const blogArticles = [
   <div class="grid grid-cols-1 overflow-auto sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 pr-6">
 
     {blogArticles.map(article => (
-      <a href="#">
-        <article class="bg-white h-full rounded-2xl text-left leading-10 p-0 shadow-lg">
-          <BackgroundImage src={article.imageUrl} />
+      <article class="bg-white h-full rounded-2xl text-left leading-10 p-0 shadow-lg">
+        <a href="#">
+          <BackgroundImage
+            src={article.imageUrl}
+            alt="a thing"
+            backgroundPosition="50% 10%"
+            backgroundSize="cover"
+          />
           <div class="py-3 px-4">
             <h1 class="text-avaRhubarb text-lg font-bold leading-[1.25] mb-1 line-clamp-2">{article.head}</h1>
             <p class="text-sm leading-5 mb-2 line-clamp-4">{article.body}</p>
           </div>
-        </article>
-      </a>
+        </a>
+      </article>
     ))}
 
   </div>
 </Layout>
 
-
 <style lang="scss" is:global>
 
   [class^="astro-imagetools-background-image"] {
-    @apply rounded-t-xl rounded-b-none h-40;
+    @apply rounded-t-xl rounded-b-none h-40 min-h-[12rem] bg-no-repeat;
   }
 
-	button {
-		align-self: flex-end;
-	}
-	article:last-child {
-		margin-bottom: 0 !important;
-	}
+  article:first-child {
+    grid-column: span 2 !important;
+  }
 
 </style>
