--- a/src/components/articles.astro
+++ b/src/components/articles.astro
@@ -49,9 +49,8 @@ const blogArticles = [
         <a href="#">
           <BackgroundImage
             src={article.imageUrl}
-            alt="a thing"
+            alt={article.head}
             backgroundPosition="50% 10%"
-            backgroundSize="cover"
           />
           <div class="py-3 px-4">
             <h1 class="text-avaRhubarb text-lg font-bold leading-[1.25] mb-1 line-clamp-2">{article.head}</h1>
