--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,15 +3,14 @@ import Layout from '../layouts/Layout.astro'
 import Button from '../components/button.astro'
 import Header from '../components/header.astro'
 import Articles from '../components/articles.astro'
-// const avaMean = 'src/images/ava-mean.png'
-// const avaNice = 'src/images/ava-nice.png'
+const avaMean = 'src/images/ava-mean.png'
+const avaNice = 'src/images/ava-nice.png'
 ---
 
-<Layout>
+<Layout title="Ava's Fun World - Home">
 	<Header />
 	<Articles />
 </Layout>
-
 
 <style lang="scss" is:global>
 
