--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -7,12 +7,11 @@ const headerText = "Ava's Fun World"
 
 <header class="w-full flex flex-col sm:flex-row gap-2 justify-between items-center rounded-3xl mb-2 sm:mb-0">
   <div class="flex flex-col flex-wrap sm:flex-row gap-0 justify-start items-center text-avaRhubarb">
-    <img class="h-24 items-center mr-4 jelloHorizontal" src={avaNice} alt="" />
-    <h1 class="font-bold font-sans text-[max(2rem,4vw)] text-center leading-[1.15] drop-shadow-[0px_4px_6px_#ff57ee]">{headerText}</h1>
+    <a href="/"><img class="h-24 items-center mr-4 jelloHorizontal" src={avaNice} alt="" /></a>
+    <h1 class="font-bold font-sans text-[max(2rem,4vw)] text-center leading-[1.15] drop-shadow-[0px_4px_6px_#ff57ee]"><a href="/">{headerText}</a></h1>
   </div>
   <div class="flex flex-wrap sm:flex-row gap-6 items-center sm:justify-end justify-center pr-0 sm:pr-8 text-avaRhubarb text-[max(1rem,2vw)]">
-    <p class="drop-shadow-[0px_4px_6px_#ff57ee]"><a href="/">Home</a></p>
-    <p class="drop-shadow-[0px_4px_6px_#ff57ee]"><a href="/blog">Blog</a></p>
+    <!-- <p class="drop-shadow-[0px_4px_6px_#ff57ee]"><a href="/">Home</a></p> -->
     <p class="drop-shadow-[0px_4px_6px_#ff57ee]"><a href="/about">About</a></p>
   </div>
 </header>
