--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -4,7 +4,6 @@ import Header from '../components/header.astro'
 import Panel from '../components/panel.astro'
 
 // import Image from '../components/image.astro'
-
 const avaMean = 'src/images/ava-mean.png'
 // const avaNice = 'src/images/ava-nice.png'
 
@@ -19,19 +18,18 @@ const posts = await Astro.glob('../posts/*.md')
 
     <div class="w-full bg-white h-auto px-12 py-12 rounded-3xl mb-6">
       <div class="grid grid-cols-3 gap-10">
-        <div class="">
-          <!-- <Image imageUrl="/ava-mean.png" altText={'Ava Mean'} /> -->
-          <img class="w-full rounded-l-2xl" src="https://placedog.net/400/480" alt="Nahhh">
-        </div>
-        <div class="col-span-2">
-          {posts.map(post => (
+        {posts.map(post => (
+          <div class="">
+            <img class="w-full rounded-l-2xl" src="https://placedog.net/400/480" alt="Nahhh">
+          </div>
+          <div class="col-span-2">
             <Panel>
               <h2>{post.frontmatter.title}</h2>
               <p>{post.frontmatter.excerpt}</p>
-              <a class="rounded-full px-8 py-1 bg-avaRhubarb" href="`/${post.frontmatter.slug}`">Read More</a>
+              <a class="rounded-full px-8 py-1 bg-avaRhubarb" href="{`/${post.frontmatter.slug}`}">Read More</a>
             </Panel>
-          ))}
-        </div>
+          </div>
+        ))}
       </div>
     </div>
 
