--- a/src/components/blog.astro
+++ b/src/components/blog.astro
@@ -5,13 +5,13 @@ const posts = await Astro.glob('../posts/*.md')
 // const { frontmatter } = Astro.props.post
 ---
 
-<div class="grid grid-cols-1 overflow-auto auto-rows-auto overflow-x-hidden sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 pr-6">
+<div class="h-screen flex flex-col sm:grid grid-cols-1 gap-4 pr-6 overflow-auto auto-rows-min overflow-x-hidden sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 ">
   {posts.map(post => (
-		<article class="bg-white h-full rounded-2xl text-left leading-10 p-0 shadow-lg">
+		<article class="bg-white rounded-2xl text-left leading-10 p-0 shadow-lg">
 			<a href={post.frontmatter.slug}>
-				<div class="py-6 px-8 bg-white rounded-2xl">
-          <h1 class="text-avaRhubarb text-inherit text-lg font-bold leading-[1.25] mb-1 line-clamp-2">{post.frontmatter.title}</h1>
-          <p class="text-inherit text-sm leading-5 mb-2 line-clamp-4">{new Date(post.frontmatter.date).toLocaleDateString()}</p>
+				<div class="w-full py-6 px-8 bg-white rounded-2xl">
+          <h1 class="text-avaRhubarb text-2xl font-bold leading-[1.25] mb-2 line-clamp-2">{post.frontmatter.title}</h1>
+          <p class="text-inherit text-sm leading-5 mb-2 line-clamp-4">Written by <strong>{post.frontmatter.author} </strong> on {new Date(post.frontmatter.date).toLocaleDateString()}</p>
           <p class="text-inherit text-base leading-6 mb-2 line-clamp-4">{post.frontmatter.excerpt}</p>
         </div>
 			</a>
