--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -18,13 +18,13 @@ const { Content, frontmatter } = Astro.props.post;
 
 <Layout title={frontmatter.title}>
 
-  <a class="block text-sm bg-white/50 hhover:bg-white/20 rounded-full py-1 px-4 self-start " href="/">back</a>
 
   <div class="bg-white p-12 rounded-2xl">
     <div class="text-left">
-      <h2 class="text-avaRhubarb text-3xl font-bold mb-2">{frontmatter.title}</h2>
-      <p class="text-sm mb-2">Written by <strong>{frontmatter.author} </strong> on {new Date(frontmatter.date).toLocaleDateString()}</p>
-      <div class="text-lg">
+      <a class="inline-block text-sm text-avaRhubarb/60 hover:text-white bg-avaViolet/10 hover:bg-avaRhubarb/60 rounded-full py-2 px-5 self-start mb-6" href="/"> < </a>
+      <h2 class="text-avaRhubarb text-5xl font-bold mb-6">{frontmatter.title}</h2>
+      <p class="text-sm mb-6">Written by <strong>{frontmatter.author} </strong> on {new Date(frontmatter.date).toLocaleDateString()}</p>
+      <div class="text-lg leading-8">
         <Content />
       </div>
     </div>
