--- a/src/styles/scroller.scss
+++ b/src/styles/scroller.scss
@@ -5,11 +5,14 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgb(255, 187, 0);
+  background: transparentize($avaLemon,.25);
+  // background: $gradient-bottom;
   // box-shadow: 0 2px 10px hsl(0deg 0% 0% / 50%);
   // border-right: 2px solid black;
+  // border: 1px solid $avaLemon;
   border-bottom: 2px solid $avaRhubarb;
   border-radius: 100px;
+  // margin-bottom: -2px;;
   cursor: pointer;
 
   &:hover {
