--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,7 +7,7 @@ const avaNice = 'src/images/ava-nice.png'
 ---
 
 <Layout title="Ava's Fun World - About">
-  <div class="w-full bg-white h-auto p-24 pt-14 rounded-3xl text-left">
+  <div class="w-full bg-white h-auto p-10 pt-8 sm:p-24 sm:pt-14 rounded-3xl text-left">
     <h1 class="text-2xl font-bold leading-10 mb-2 text-avaRhubarb">About</h1>
     <p class="leading-8 mb-6">Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vestibulum id ligula porta felis euismod semper. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed odio dui. Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.</p>
     <p class="leading-8 mb-6">Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vestibulum id ligula porta felis euismod semper. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed odio dui. Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod.</p>
