--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro'
 import Blog from '../components/blog.astro'
 
-import Image from '../components/image.astro'
+import Gene from '/gene.png'
 
 const avaMean = 'src/images/ava-mean.png'
 const avaNice = 'src/images/ava-nice.png'
@@ -17,13 +17,12 @@ const posts = await Astro.glob('../posts/*.md')
 
 <style lang="scss" is:global>
 
-	button {
-		align-self: flex-end;
-	}
-	article:last-child {
-		margin-bottom: 0 !important;
-	}
-
+	// button {
+	// 	align-self: flex-end;
+	// }
+	// article:last-child {
+	// 	margin-bottom: 0 !important;
+	// }
 
 	[class^="astro-imagetools-background-image"] {
     @apply rounded-t-xl rounded-b-none h-40 min-h-[12rem] bg-no-repeat;
@@ -32,5 +31,7 @@ const posts = await Astro.glob('../posts/*.md')
   article:first-child {
     grid-column: span 2 !important;
   }
+
+
 
 </style>
