--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -18,17 +18,19 @@ const { Content, frontmatter } = Astro.props.post;
 
 <Layout title={frontmatter.title}>
 
-  <div class="bg-white p-12 rounded-2xl">
+  <div class="bg-white p-12 rounded-2xl overflow-x-hidden">
     <div class="text-left">
-      <a class="inline-block text-sm text-avaRhubarb/60 hover:text-white bg-avaViolet/10 hover:bg-avaRhubarb/60 rounded-full py-2 px-5 self-start mb-6" href="/"> < </a>
-      <h2 class="text-avaRhubarb text-5xl font-bold mb-6">{frontmatter.title}</h2>
+      <div class="flex flex-row gap-4">
+        <a class="block text-2xl text-avaRhubarb/60 hover:text-white bg-avaViolet/10 hover:bg-avaRhubarb/60 rounded-l-2xl pl-3  pr-2 pt-1 pb-2 self-start justify-self-center leading-8" href="/"> &laquo; </a>
+        <h2 class="mb-6">{frontmatter.title}</h2>
+      </div>
       <p class="text-sm mb-6">Written by <strong>{frontmatter.author} </strong> on {new Date(frontmatter.date).toLocaleDateString()}</p>
 
       <div class="flex flex-col lg:flex-row gap-6">
 
-        <img class="w-full h-min" src={frontmatter.image} alt={frontmatter.title}>
+        <img class="w-full lg:w-1/3 h-min" src={frontmatter.image} alt={frontmatter.title}>
 
-        <div class="shrink text-base sm:text-lg leading-8">
+        <div class="w-full lg:w-2/3 text-base lg:text-lg leading-8">
           <Content />
         </div>
       </div>
