--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -23,3 +23,17 @@ $gradient-bottom: linear-gradient(180deg, $avaViolet, $avaPizzazz, $avaLemon);
 .yellow {
   color: yellow !important;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: bold;
+  line-height: 1.25;
+  color: hsl(306, 57%, 53%);
+  margin-bottom: .5rem;
+}
+
+h1 { font-size: 2.5rem; }
+h2 { font-size: 2rem; }
+h3 { font-size: 1.5rem; }
+h4 { font-size: 1rem; }
+h5 { font-size: 0.75rem; }
+h6 { font-size: .5rem; }
