--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -26,25 +26,14 @@ const { Content, frontmatter } = Astro.props.post;
       </div>
       <p class="text-sm mb-6">Written by <strong>{frontmatter.author} </strong> on {new Date(frontmatter.date).toLocaleDateString()}</p>
 
-      <div class="flex flex-col lg:flex-row gap-6">
-
-        <img class="w-full lg:w-1/3 h-min" src={frontmatter.image} alt={frontmatter.title}>
-
-        <div class="w-full lg:w-2/3 text-base lg:text-lg leading-8">
-          <Content />
-        </div>
+      <div class="w-full text-base lg:text-lg leading-8">
+        <Content />
+      </div>
       </div>
     </div>
-  </div>
+
 </Layout>
 
 <style lang="scss">
-  // pre {
-  // }
-
-  pre > .astro-code {
-    background: red !important;
-
-  }
 
 </style>
