--- a/src/layouts/LayoutWhiteBack.astro
+++ b/src/layouts/LayoutWhiteBack.astro
@@ -1,6 +1,8 @@
 ---
 import '../styles/styles.scss'
 import Header from '../components/header.astro'
+import { Img } from "astro-imagetools/components";
+
 
 export interface Props {
   title?: string;
