--- a/src/components/blog.astro
+++ b/src/components/blog.astro
@@ -9,9 +9,9 @@ const posts = await Astro.glob('../posts/*.md')
   {posts.map(post => (
 		<article class="bg-white rounded-2xl text-left leading-10 p-0 shadow-lg hover:shadow-[4px_4px_0px_0px_rgba(0,0,0,.25)]">
 			<a href={post.frontmatter.slug}>
-				<div>
+				<!-- <div>
 					<img class="w-full h-min rounded-2xl rounded-b-none" src={post.frontmatter.image} alt={post.frontmatter.title}>
-				</div>
+				</div> -->
 				<div class="w-full py-6 px-8 rounded-2xl">
           <h1 class="text-avaRhubarb text-2xl font-bold leading-[1.25] mb-2 line-clamp-2">{post.frontmatter.title}</h1>
           <p class="text-inherit text-sm leading-5 mb-2 line-clamp-4">Written by <strong>{post.frontmatter.author} </strong> on {new Date(post.frontmatter.date).toLocaleDateString()}</p>
