--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,7 +15,7 @@ import LayoutWhiteBack from '../layouts/LayoutWhiteBack.astro'
     <hr class="block my-8 w-full" />
 
     <p>I really love mushrooms, especially Fly Agarics with their beautiful red tops with white polka dots.</p>
-    <img class="w-1/2 my-6" src="/public/fly-agaric.jpg" alt="Fly Agaric Mushroom" />
+    <img class="w-1/2 my-6" src="/fly-agaric.jpg" alt="Fly Agaric Mushroom" />
 
 
     <hr class="block my-8 w-full" />
