--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,15 +1,13 @@
 ---
-import LayoutWhiteBack from '../layouts/LayoutWhiteBack.astro'
+import Layout from '../layouts/Layout.astro'
 ---
 
-<LayoutWhiteBack>
-
-  <div class=" p-6 text-left">
+<Layout>
+  <div class="bg-white p-12 rounded-2xl overflow-x-hidden text-left">
 
     <h2>About Ava's Fun World!</h2>
 
     <img class="w-24 float-right" src="/ava-nice.png" alt="Ava Fun" width="300" />
-
     <p>Welcome to Ava's Fun world where we love frogs and mushrooms and dogs of all stripes. I do all kinds of crazy things because I am crazy bananas 😆</p>
 
     <hr class="block my-8 w-full" />
@@ -17,14 +15,11 @@ import LayoutWhiteBack from '../layouts/LayoutWhiteBack.astro'
     <p>I really love mushrooms, especially Fly Agarics with their beautiful red tops with white polka dots.</p>
     <img class="w-1/2 my-6" src="/fly-agaric.jpg" alt="Fly Agaric Mushroom" />
 
-
     <hr class="block my-8 w-full" />
 
     <img class="w-24 float-left" src="/ava-mean.png" alt="Ava Fun" width="300" />
     <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nulla vitae elit libero, a pharetra augue.</p>
 
-    <hr class="block my-8 w-full" />
+  </div>
 
-</div>
-
-</LayoutWhiteBack>
+</Layout>
