--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,8 +1,8 @@
 ---
 const avaMean = 'src/images/ava-mean.png'
 const avaNice = 'src/images/ava-nice.png'
-import Gene from '/gene.png'
-import GeneFlip from '/gene-flipped.png'
+import Gene from 'src/img/gene.png'
+import GeneFlip from 'src/img/gene-flipped.png'
 const headerText = "Ava's Fun World"
 
 ---
