--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -2,7 +2,7 @@
 // const avaMean = '/src/images/ava-mean.png'
 // const avaNice = '/src/images/ava-nice.png'
 // import Gene from '/src/images/gene.png'
-import GeneFlip from '../images/gene-flipped.png'
+import GeneFlip from '/src/images/gene-flipped.png'
 const headerText = "Ava's Fun World"
 
 ---
